# hummingbird_demo

./: CMakeLists.txt  calcs.nb  calcs2.nb  check_control_inputs.m  fun_traj.m  fun_traj_safe.m  package.xml
config/: mav_manager.yaml  mav_manager_params.yaml
config/multi_robot/: HelixWaypoint.m  check_control_inputs.m  generate_trajectories.m  params.yaml  params_generator.m  rviz_config.rviz  sim_params.yaml  sim_params_generator.m
include/trajectory/: trajectory.h
launch/: comms.launch  demo.launch  estop.bash  multi_robot.launch  multi_robot_odom.launch  multi_robot_rviz.launch  prep.bash  robot.launch  robot_sim.launch  simple_test.bash  traj.bash
scripts/: demo.sh
src/: multi_mav_services.cpp  sample.cpp  trajectory.cpp
